--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,11 +12,11 @@
     <div class="wrapper">
         <header>
             <h1>
-                <a href="/">home</a>
+                <a href="/">Home</a>
             </h1>
             <nav>
                 {{#if loggedIn}}
-                <a href="/dashboard">dashboard</a>
+                <a href="/dashboard">Dashboard</a>
                 <button id="logout" class="btn-no-style logout">logout</button>
                 {{else}}
                 <a href="/login">login</a>
